# OpenLR2

./: .gitignore  CMakeLists.txt  CMakePresets.json  LR2_configsave.cpp  LR2_skinmanage.cpp  LR2_songmanage.cpp  LR2f.cpp  LR2f.h  LR2input.cpp  LR2startup.cpp  Main.cpp  OpenLR2.vcxproj  OpenLR2.vcxproj.filters  OpenLR2_vs22.sln  OpenLR2_vs22.vcxproj  OpenLR2_vs22.vcxproj.filters  README.md  imported.txt  new_command(bms).md  new_command(bms).txt  new_command(skin).md  structure.h
ExampleIR/: ExampleIR.vcxproj  ExampleIR.vcxproj.filters  ExternalIR.cpp  README.md
LR2/: En_audio.cpp  En_audio.h  En_dbio.cpp  En_dxlibstub.h  En_fileutil.cpp  En_graphic.cpp  En_graphic.h  En_input.cpp  En_input.h  En_recordmovie.cpp  En_timer.cpp  En_timer.h  En_value.cpp  En_xml.cpp  En_xml.h  LR2_audio.cpp  LR2_bmsload.cpp  LR2_bmsload.h  LR2_configsave.cpp  LR2_configsave.h  LR2_customir.cpp  LR2_customir.h  LR2_customir_api.h  LR2_gameloop.cpp  LR2_ghost.cpp  LR2_ghost.h  LR2_ir.cpp  LR2_makemp3.cpp  LR2_replay.cpp  LR2_skindraw.cpp  LR2_skinload.cpp  LR2_skinmanage.cpp  LR2_skinobject.cpp  LR2_songmanage.cpp  LR2_songmanage.h  LR2_statlong.cpp  LR2_statplay.cpp  LR2_version.cpp  Main.cpp  Scene02_Songselect.cpp  (+13 more)
OpcodeScript/: bargraphOP.txt  bargraphOP.txtA.h  bargraphOP.txtB.h
SkinEditor/: example_sdl3_sdlrenderer3.vcxproj  example_sdl3_sdlrenderer3.vcxproj.filters  main.cpp  skin.cpp  winWorkspace.cpp
lib/DxLib/DxLib/: DxDataTypeWin.h  DxDirectX.h
lib/dxlib-for-linux/DxLib/: DxLib  Makefile
lib/md5/: md5.cpp  md5.h
